@@ -11,6 +11,7 @@ prereqs_skip = Moose::Util::TypeConstraints
 prereqs_skip = Specio
 prereqs_skip = Sub::Util
 prereqs_skip = Types::Standard
+stopwords = getter
 stopwords = params
 stopwords = slurpy
 stopwords = uncompromised
@@ -20,12 +21,13 @@ use_github_issues = 1
 -remove = Test::CleanNamespaces
 
 [Prereqs / DevelopRequires]
-Const::Fast  = 0.014
-Hash::Util   = 0
-Moose        = 2.0000
-Specio       = 0.14
-Sub::Util    = 1.40
-Type::Tiny   = 0
+Class::XSAccessor = 0
+Const::Fast       = 0.014
+Hash::Util        = 0
+Moose             = 2.0000
+Specio            = 0.14
+Sub::Util         = 1.40
+Type::Tiny        = 0
 
 [Prereqs / Recommends]
 Sub::Util = 1.40
