@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- Added a new option for named params, "return_object". This causes the
+  validation sub to return an object with methods for each param rather than a
+  hashref. This is a great way to avoid typos in hash keys. This idea (and
+  some of the implementation) was shamelessly stolen from Toby Inkster's
+  Type::Params module.
+
+
 0.27     2018-02-11
 
 - Fixed a bug with inlining Moose types. If a type's parent needed environment
